--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "mangum (>=0.19.0,<0.20.0)",
-    "pydantic (>=2.10.6,<3.0.0)"
+    "pydantic (>=2.10.6,<3.0.0)",
+    "sqlalchemy (>=2.0.38,<3.0.0)"
 ]
 
 
