--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,24 @@
-[project]
-name = "project-poerty"
+[tool.poetry]
+name = "fastapi-lambda-demo"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "gadname",email = "gakugaku1114@icloud.com"}
-]
+description = "FastAPI Lambda Demo Application"
+authors = ["gadname <gakugaku1114@icloud.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "fastapi (>=0.115.8,<0.116.0)",
-    "mangum (>=0.19.0,<0.20.0)",
-    "pydantic (>=2.10.6,<3.0.0)",
-    "sqlalchemy (>=2.0.38,<3.0.0)"
-]
 
+[tool.poetry.dependencies]
+python = "^3.11"
+fastapi = "^0.115.8"
+mangum = "^0.19.0"
+pydantic = "^2.10.6"
+sqlalchemy = "^2.0.38"
+uvicorn = "^0.27.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+black = "^23.7.0"
+isort = "^5.12.0"
+flake8 = "^6.1.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
