--- a/backend/fastapi/app/pyproject.toml
+++ b/backend/fastapi/app/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["gadname <gakugaku1114@icloud.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.13,<3.14"
 fastapi = "^0.115.8"
 mangum = "^0.19.0"
 pydantic = "^2.10.6"
