--- a/backend/fastapi/.devcontainer/Dockerfile
+++ b/backend/fastapi/.devcontainer/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.12.7-slim
 
-WORKDIR workspace
-RUN apt update
-RUN apt install -y git
+WORKDIR /workspace
+RUN apt-get update && apt-get install -y git
 RUN pip install poetry==1.8.3
-COPY ../pyproject.toml ./
+
+COPY pyproject.toml poetry.lock* ./
 
 RUN poetry config virtualenvs.create false && \
-    poetry install --no-interaction
+    poetry install --no-interaction --no-root
 
-
+ENV PYTHONPATH=/workspace
