--- a/backend/fastapi/app/pyproject.toml
+++ b/backend/fastapi/app/pyproject.toml
@@ -12,6 +12,8 @@ mangum = "^0.19.0"
 pydantic = "^2.10.6"
 sqlalchemy = "^2.0.38"
 uvicorn = "^0.27.0"
+pydantic-settings = "^2.2.1"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
