--- a/backend/fastapi/Dockerfile
+++ b/backend/fastapi/Dockerfile
@@ -1,13 +1,15 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 WORKDIR /app
 
-RUN pip install poetry
+RUN apt-get update && apt-get install -y git
+RUN pip install poetry==1.8.3
 
-COPY ./pyproject.toml ./poetry.lock* /tmp/
+COPY pyproject.toml poetry.lock* ./
 
-RUN poetry install --no-interaction --no-root
+RUN poetry config virtualenvs.create false && \
+    poetry install --no-interaction --no-root
 
-COPY . .
+ENV PYTHONPATH=/app
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
