--- a/backend/fastapi/pyproject.toml
+++ b/backend/fastapi/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.38"
 uvicorn = "^0.27.0"
 pydantic-settings = "^2.2.1"
 asyncpg = "^0.29.0"
+ulid-py = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
