--- a/.github/workflows/add_label.yml
+++ b/.github/workflows/add_label.yml
@@ -1,17 +1,47 @@
-name: Auto Label on Analysis Complete
+name: Auto Label After Analysis
 on:
   issue_comment:
     types: [created]
 
 jobs:
-  check-and-label:
-    if: contains(github.event.comment.body, '[ANALYSIS_COMPLETE]')
+  add-label-after-analysis:
+    # ClaudeのコメントでANALYSIS_COMPLETEが含まれている場合のみ実行
+    if: |
+      github.event.comment.user.type == 'Bot' && 
+      contains(github.event.comment.body, '[ANALYSIS_COMPLETE]')
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
     steps:
       - name: Add workflow:ready-for-impl label
-        uses: actions-ecosystem/action-add-labels@v1
+        uses: actions/github-script@v7
         with:
-          labels: workflow:ready-for-impl
+          script: |
+            console.log('Analysis complete detected. Adding label...');
+            
+            await github.rest.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              labels: ['workflow:ready-for-impl']
+            });
+            
+            console.log('Successfully added workflow:ready-for-impl label');
+
+      # 既存のworkflow:ready-for-analysisラベルを削除（オプション）
+      - name: Remove workflow:ready-for-analysis label
+        uses: actions/github-script@v7
+        with:
+          script: |
+            try {
+              await github.rest.issues.removeLabel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                name: 'workflow:ready-for-analysis'
+              });
+              console.log('Removed workflow:ready-for-analysis label');
+            } catch (error) {
+              console.log('Label not found or already removed');
+            }
