--- a/.github/workflows/add_label.yml
+++ b/.github/workflows/add_label.yml
@@ -1,68 +1,44 @@
-name: Auto Label After Analysis Debug
+name: Auto Label After Analysis
 on:
   issue_comment:
     types: [created]
 
 jobs:
-  process-comment:
-    # 条件なしで常に実行
+  add-label-after-analysis:
+    # Claude[bot]のコメントで、working...メッセージではない場合
+    if: |
+      github.event.comment.user.login == 'claude[bot]' &&
+      !contains(github.event.comment.body, 'Claude Code is working')
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
     steps:
-      - name: Debug Comment Info
+      - name: Debug Info
         run: |
-          echo "=== Comment Debug Info ==="
-          echo "Event: ${{ github.event_name }}"
-          echo "Action: ${{ github.event.action }}"
-          echo "User Login: ${{ github.event.comment.user.login }}"
-          echo "User Type: ${{ github.event.comment.user.type }}"
-          echo "User ID: ${{ github.event.comment.user.id }}"
-          echo "Is Bot (string compare): ${{ github.event.comment.user.type == 'Bot' }}"
-          echo "Comment Body Length: ${#COMMENT_BODY}"
-          echo "First 200 chars: ${COMMENT_BODY:0:200}"
-          echo "Contains [ANALYSIS_COMPLETE]: ${{ contains(github.event.comment.body, '[ANALYSIS_COMPLETE]') }}"
-          echo "Full User Object: ${{ toJSON(github.event.comment.user) }}"
+          echo "Claude comment detected!"
+          echo "Comment preview: ${COMMENT_BODY:0:100}..."
+          echo "Contains ANALYSIS_COMPLETE: ${{ contains(github.event.comment.body, '[ANALYSIS_COMPLETE]') }}"
         env:
           COMMENT_BODY: ${{ github.event.comment.body }}
 
       - name: Check and Add Label
+        if: contains(github.event.comment.body, '[ANALYSIS_COMPLETE]')
         uses: actions/github-script@v7
         with:
           script: |
-            const comment = context.payload.comment;
-            console.log('=== JavaScript Debug ===');
-            console.log('User type:', comment.user.type);
-            console.log('User login:', comment.user.login);
-            console.log('Is bot?:', comment.user.type === 'Bot');
-            console.log('Comment preview:', comment.body.substring(0, 200));
-            console.log('Contains marker?:', comment.body.includes('[ANALYSIS_COMPLETE]'));
+            console.log('ANALYSIS_COMPLETE marker found! Adding label...');
             
-            // より柔軟な条件チェック
-            const isClaude = comment.user.login.includes('claude') || 
-                            comment.user.type === 'Bot' ||
-                            comment.user.login.endsWith('[bot]');
-            
-            const hasMarker = comment.body.includes('[ANALYSIS_COMPLETE]');
-            
-            console.log('Is Claude?:', isClaude);
-            console.log('Has marker?:', hasMarker);
-            
-            if (isClaude && hasMarker) {
-              console.log('Adding label...');
-              try {
-                await github.rest.issues.addLabels({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: context.issue.number,
-                  labels: ['workflow:ready-for-impl']
-                });
-                console.log('Label added successfully!');
-              } catch (error) {
-                console.error('Failed to add label:', error);
-              }
-            } else {
-              console.log('Conditions not met, skipping label addition');
-              console.log('Reason:', !isClaude ? 'Not Claude' : 'No marker found');
+            try {
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: ['workflow:ready-for-impl']
+              });
+              
+              console.log('Successfully added workflow:ready-for-impl label');
+            } catch (error) {
+              console.error('Failed to add label:', error);
+              throw error;
             }
